# ghar-hisab-backend

./: .backup-env  .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  requirements.txt  server.sh
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: routers.py  settings.py  urls.py
room/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
room/migrations/: 0001_initial.py  0002_paymenthistory.py  0003_tenant.py  0004_alter_paymenthistory_month.py  0005_remove_room_owner_house_room_house.py  0006_paymenthistory_electricity_status_and_more.py  0007_tenant_electricity_price_per_unit.py  0008_alter_tenant_electricity_price_per_unit.py  0009_paymenthistory_created_at.py  0010_remove_tenant_document_tenantdocument.py  0011_tenant_rent_price_tenant_waste_price_and_more.py  0012_paymenthistory_waste_paymenthistory_waste_status.py  0013_remove_paymenthistory_month_and_more.py  0014_paymenthistory_electricity_updated_at_and_more.py  0015_paymentreceived.py  0016_alter_paymentreceived_status.py  0017_tenant_initial_unit.py  0018_paymenthistory_initial_unit.py  0019_remove_paymenthistory_initial_unit.py  0020_alter_paymenthistory_billing_month.py  0020_alter_paymenthistory_billing_month_and_more.py  0021_alter_paymentreceived_received_date.py  0022_alter_paymentreceived_received_date_and_more.py
templates/: base.html  landing.html
tenant_documents/: Subject__-_Relationship_Certificate.docx
(+17 files in other folders)
